--- a/home.html
+++ b/home.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title></title>
-	<style type="text/css">
+	<style type="text/css">/*
+		
 	body{
 			background: linear-gradient(to right ,orange 50%,green 50%,red 50%);
 			background-position: center;
@@ -20,19 +21,47 @@
 
     float: right;
 		}
-	</style>
+	</style>/*
 	
 	
 </head>
 <body>
-	<header class="one">
-	<h1> HOME PAGE </h1></header>
-	<header class="two"><img src="pic.jpg">
-	<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p></header>
+
+
+
+	<p style="text-align: right;"><span style="color: red;"><br /></span></p><h1 data-end="362" data-start="310"><span style="color: blue;">📚 Welcome to the Best Online Tuition Academy&nbsp;</span></h1><div><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjw1FeHm6XeDruO9lAfZb0iL3ZTTjrGOl9lh8L0QzYSwywD-G1f8gzUjAseEdHMbHRskCg8nLkscyOLOwjehDdI3yIf4cNI5-QuwlMVxVKt8TOqnKYgPtYGG7HsmSZwuZkveMosqdlSZMQZMXlXrnqWWrM1ZiCzvxSRmpD4486xcyeZoJ3Jp2VgG7VR1Q/s700/onlinetution1.png" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><img border="0" data-original-height="700" data-original-width="700" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjw1FeHm6XeDruO9lAfZb0iL3ZTTjrGOl9lh8L0QzYSwywD-G1f8gzUjAseEdHMbHRskCg8nLkscyOLOwjehDdI3yIf4cNI5-QuwlMVxVKt8TOqnKYgPtYGG7HsmSZwuZkveMosqdlSZMQZMXlXrnqWWrM1ZiCzvxSRmpD4486xcyeZoJ3Jp2VgG7VR1Q/s16000/onlinetution1.png" /></a></div><br /><span style="color: red;"><br /></span></div><div><p data-end="574" data-start="364"><span style="color: #2b00fe; font-size: medium;">Are you looking for <strong data-end="436" data-start="384">quality education from the comfort of your home?</strong><br data-end="439" data-start="436" />
+We bring you the perfect solution: <strong data-end="574" data-start="474">Online Tuition Academy — a trusted platform for students who cannot attend a physical institute.</strong></span></p>
+<p data-end="700" data-start="576"><span style="color: #2b00fe; font-size: medium;">Whether you are a <strong data-end="609" data-start="594">boy or girl</strong>, we provide you with all the resources and guidance you need to succeed in your studies.</span></p></div><div></div><h1 style="text-align: right;"><span style="color: #2b00fe; text-align: center;">
+</span></h1><h2 data-end="750" data-start="707"><span style="color: red;">Why Choose Our Online Tuition Academy?</span></h2><h1 style="text-align: right;"><span style="color: #2b00fe; text-align: center;">
+<p data-end="956" data-start="752"></p><div style="text-align: justify;"><span style="font-size: large;">✅ </span><strong data-end="789" data-start="754" style="font-size: large;">A Big Platform for All Students</strong></div><p></p><div style="text-align: justify;"><span style="font-size: large;">Our academy is designed to help students who prefer to study at home. No matter where you live, you can now access the best tutors and notes right from your home!</span></div><span style="font-size: medium;"><div style="text-align: justify;">We offer equal opportunities for both male and female students, with separate tutors available according to your preference.</div><div style="text-align: justify;">We provide high-quality, easy-to-understand notes for:</div><div style="text-align: justify;">(for Class 9th and 10th students)</div><div style="text-align: justify;">Our team of experienced tutors is ready to guide you at every step. You can choose a male or female tutor based on your comfort.</div><div style="text-align: justify;">From personalized notes to one-on-one guidance — we make sure you have everything you need to excel in your exams.</div></span><p></p><p></p><p data-end="1114" data-start="958" style="text-align: justify;"><span style="font-size: medium;">✅ <strong data-end="985" data-start="960">Best for Girls &amp; Boys</strong><br data-end="988" data-start="985" /></span></p><p data-end="1218" data-start="1116" style="text-align: justify;"><span style="font-size: medium;">✅ <strong data-end="1159" data-start="1118">Complete Notes for All Major Subjects</strong><br data-end="1162" data-start="1159" /></span></p><ul data-end="1308" data-start="1219">
+<li data-end="1234" data-start="1219">
+<p data-end="1234" data-start="1221" style="text-align: justify;"><span style="font-size: medium;">Mathematics</span></p>
+</li>
+<li data-end="1246" data-start="1235">
+<p data-end="1246" data-start="1237" style="text-align: justify;"><span style="font-size: medium;">Physics</span></p>
+</li>
+<li data-end="1260" data-start="1247">
+<p data-end="1260" data-start="1249" style="text-align: justify;"><span style="font-size: medium;">Chemistry</span></p>
+</li>
+<li data-end="1308" data-start="1261">
+<p data-end="1308" data-start="1263" style="text-align: justify;"><span style="font-size: medium;">Biology<br data-end="1273" data-start="1270" /></span></p>
+</li><li data-end="1308" data-start="1261"><p data-end="1308" data-start="1263" style="text-align: justify;"><span style="font-size: medium;">Computer&nbsp;</span><span style="font-size: large;">(Python,C++,Html,Css,JavaScript etc)</span></p></li>
+</ul><p data-end="1491" data-start="1310" style="text-align: justify;"><span style="font-size: medium;">✅ <strong data-end="1358" data-start="1312">Dedicated Tutors — Male &amp; Female Available</strong><br data-end="1361" data-start="1358" /></span></p><p data-end="956" data-start="752">
+
+
+
+
+</p><p data-end="1651" data-start="1493" style="text-align: justify;"><span style="font-size: medium;">✅ <strong data-end="1532" data-start="1495">All Facilities at Your Fingertips</strong></span><br data-end="1535" data-start="1532" /></p>
+<hr data-end="1656" data-start="1653" style="font-size: x-large;" />
+</span></h1><h2 data-end="1681" data-start="1658">📞 <span style="color: red;">Contact Us Today!</span></h2><h1 style="text-align: right;"><span style="color: #2b00fe; font-size: large; text-align: center;">
+<p data-end="1796" data-start="1682">💬 <strong data-end="1698" data-start="1685">WhatsApp:</strong> <a class="cursor-pointer" data-end="1744" data-start="1699" rel="noopener" target="_new">+92 342 0965155</a><br data-end="1747" data-start="1744" />&nbsp; &nbsp; &nbsp; Don’t wait — start your journey to success today!</p></span></h1><h1 style="text-align: right;"><span style="color: #2b00fe; font-size: large; text-align: center;"><br /></span></h1><h1 style="text-align: right;"><br /></h1><p></p><p style="font-weight: bold; text-align: right;"><br /></p><p style="font-weight: bold; text-align: right;"><br /></p><div id="lsidebar-wrapper"><div style="clear: both;"><div style="clear: both;"><div style="clear: both;"><div style="clear: both;"><div id="footer-container"><div id="footer">  
+</div><!--#footer-->
+</div>
+<div style="clear: both;">
+
+</div></div></div> <!--end outer-wrapper-->
+
+</div></div></div>
+
 </body>
 </html>
