Update index.html with new latest changes

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@ p {
 <!-- Navigation -->
 <table class="main" border="0" cellpadding="5" cellspacing="0" width="100%">
 <tr>
-    <th><a href="blinking.html">HOME</a></th>
-    <th><a href="home.html">GALLERY</a></th>
-    <th><a href="galary.html">ABOUT US</a></th>
+    <th><a href="home.html">HOME</a></th>
+    <th><a href="galary.html">GALLERY</a></th>
+    <th><a href="about.html">ABOUT US</a></th>
     <th><a href="services.html">KPK TEXTBOOKS</a></th>
     <th><a href="#" onclick="openLogin()">LOGIN</a></th>
     <th>
