--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 }
 
 .main {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bolder;
     font-style: italic;
     text-align: center;
@@ -108,9 +108,11 @@ p {
 <table class="main" border="0" cellpadding="5" cellspacing="0" width="100%">
 <tr>
     <th><a href="home.html">HOME</a></th>
-    <th><a href="galary.html">GALLERY</a></th>
     <th><a href="about.html">ABOUT US</a></th>
-    <th><a href="services.html">KPK TEXTBOOKS</a></th>
+     <th><a href="#">Contact US</a></th>
+     <th><a href="services.html">KPK TEXTBOOKS</a></th>
+     <th><a href="#">Privacy Policy</a></th>
+    <th><a href="galary.html">GALLERY</a></th>
     <th><a href="#" onclick="openLogin()">LOGIN</a></th>
     <th>
         <input id="searchInput" type="search" placeholder="Search..." autocomplete="off" style="height: 30px; font-size: 16px;">
