--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ p {
 <tr>
     <th><a href="home.html">HOME</a></th>
     <th><a href="about.html">ABOUT US</a></th>
-     <th><a href="#">Contact US</a></th>
+     <th><a href="contact.html">Contact US</a></th>
      <th><a href="services.html">KPK TEXTBOOKS</a></th>
      <th><a href="#">Privacy Policy</a></th>
     <th><a href="galary.html">GALLERY</a></th>
