Update index.html with latest change

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ p {
      <th><a href="services.html">KPK TEXTBOOKS</a></th>
      <th><a href="#">Privacy Policy</a></th>
     <th><a href="galary.html">GALLERY</a></th>
-    <th><a href="#" onclick="openLogin()">LOGIN</a></th>
+    <th><a href="loginform" onclick="openLogin()">LOGIN</a></th>
     <th>
         <input id="searchInput" type="search" placeholder="Search..." autocomplete="off" style="height: 30px; font-size: 16px;">
         <button onclick="doSearch()" style="height: 34px;">SEARCH</button>
