--- a/loginform.html
+++ b/loginform.html
@@ -50,7 +50,7 @@
 
 <div class="contact-form">
   <h2>Contact Us</h2>
- <form action="https://formsubmit.co/shakirkhan1987kpk@gmail.com" method="POST">
+  <form action="#" method="post">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" placeholder="Your name..">
 
