--- a/loginform.html
+++ b/loginform.html
@@ -1,29 +1,57 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact Form</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background: #f5f5f5;
-    padding: 20px;
-  }
-  .contact-form {
-    background: white;
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  }
-  .contact-form h2 {
-    margin-bottom: 15px;
-    text-align: center;
-  }
-  .contact-form input,
+	<title> form tag </title>
+	<style type="text/css">
+		.container{
+			width: 600px;
+			height: 550px;
+			border: 2px solid red;
+			padding: 30px 30px;
+			margin: auto;
+		}
+		input[type=text]{
+			width: 50%;
+			padding: 10px 15px;
+			margin: 10px 0px;
+			box-sizing: border-box;
+			border: 2px solid red;
+			border-radius: 3px;
+			background-color: #3CBC8D;
+			color: white;
+			font-size: 20px;
+			font-weight: bold;
+			font-family: sans-serif;
+			outline: none;
+		}
+		
+			input[type=email]{
+			width: 50%;
+			padding: 10px 15px;
+			margin: 10px 0px;
+			box-sizing: border-box;
+			border: 2px solid red;
+			border-radius: 3px;
+			background-color: #3CBC8D;
+			color: white;
+			font-size: 20px;
+			font-weight: bold;
+			font-family: sans-serif;
+			outline: none;
+
+
+		}
+
+		input[type=button],input[type=submit],input[type=reset]{
+			background-color: #4caf50;
+			border: none;
+			color: white;
+			padding: 15px 30px;
+			text-decoration: none;
+			margin: 4px 2px;
+			cursor: pointer;
+		}
+		 .contact-form input,
   .contact-form textarea {
     width: 100%;
     padding: 10px;
@@ -31,38 +59,26 @@
     border: 1px solid #ccc;
     border-radius: 4px;
   }
-  .contact-form button {
-    width: 100%;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 12px;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  .contact-form button:hover {
-    background-color: #45a049;
-  }
-</style>
+	</style>
 </head>
-<body>
-
-<div class="contact-form">
-  <h2>Contact Us</h2>
-  <form action="#" method="post">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" placeholder="Your name..">
-
-    <label for="email">Email *</label>
-    <input type="email" id="email" name="email" placeholder="Your email.." required>
+<body style="background-color: blue;">
+	<div class="container">
+	<form action="register.php" method="post">
+	     <h1 style ="color: red;"> Student Registration Form </h1>
+		FIRST NAME :<input type="text" name="fname"><br><br>
+		LAST NAME :<input type="text" name="lname"><BR><BR>
+		 		YOUR EMAIL :<input type="email" name="email"><BR><BR>
+		PASSWORD :<input type="password" name="pass"><BR><BR>
 
     <label for="message">Message *</label>
-    <textarea id="message" name="message" placeholder="Write something.." rows="5" required></textarea>
-
-    <button type="submit">Send</button>
-  </form>
-</div>
+    <textarea id="message" name="message" placeholder="Write something.." rows="5" required></textarea><BR><BR>
+		<input type="button" value="button">
+		<input type="submit" value="submit">  
+		<input type="reset" value="reset">  
+			
+		
+	</form>
+	</div>
 
 </body>
 </html>
