--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Responsive Website</title>
+<title>World Of Knowledge</title>
 <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" type="text/css" href="Bblinking.css">
     <link rel="stylesheet" type="text/css" href="externalstylesheet.css">
