Update index.html latest changes

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <h3 data-end="5119" data-start="5100" style="font-size: xx-large;">📧 Contact Us</h3>
 <p data-end="5237" data-start="5120" style="text-align: justify;"><span style="font-size: medium;">If you ever have any questions, feedback, or suggestions, feel free to reach out to us. We’d love to hear from you!</span></p>
 <p data-end="5366" data-start="5239"></p><div style="text-align: justify;"><span style="font-size: large;">📱 </span><strong data-end="5258" data-start="5242" style="font-size: large;">WhatsApp Us:</strong><span style="font-size: large;"> </span><a class="cursor-pointer" data-end="5304" data-start="5259" rel="noopener" style="font-size: large;" target="_new">+92 342 0965155</a></div><span style="font-size: medium;"><div style="text-align: justify;">📩 Or leave us a message through our <strong data-end="5358" data-start="5344">Contact Us</strong> page.</div></span><p></p><br /></span></span><p></p>
-  </article> <-main>
+  </article> </main>
 
  <!-- <article>-->
     <h1></h1><h1 data-end="240" data-start="191" style="text-align: right;"><span style="color:  white; font-size: x-large;">📞 ہم سے رابطہ کریں — Online Learning Tuition</span></h1>
