Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 
 
-<marquee class="one1" onmouseover="this.stop()" onmouseleave="this.start()">ONLINE COURSE OFFERS — <a href="home.html">Click Here</a></marquee>
-<marquee class="two2" direction="right" onmouseover="this.stop()" onmouseleave="this.start()">Home Tuition Available — <a href="contact.html">Click Here</a></marquee>
+<marquee class="one1" onmouseover="this.stop()" onmouseleave="this.start()">ONLINE COURSE OFFERS📚  <a href="home.html">👉 Click Here</a></marquee>
+<marquee class="two2" direction="right" onmouseover="this.stop()" onmouseleave="this.start()">Home Tuition Available📚 <a href="contact.html">👉 Click Here</a></marquee>
 
 
 <!-- Latest News -->
@@ -51,7 +51,7 @@
        <!-- Start Notice Section -->
   <section class="notice">
     <div class="notice-div">
-            <marquee scrollamount="10" onmouseover="this.stop()" onmouseleave="this.start()">KPK TEXTBOOKS AVAILABLE ONLINE <a href="services.html">Click Here</a></marquee>
+            <marquee scrollamount="10" onmouseover="this.stop()" onmouseleave="this.start()">KPK TEXTBOOKS AVAILABLE ONLINE 📚 <a href="services.html">👉 Click Here</a></marquee>
     </div>
   </section>
 
