--- a/index.html
+++ b/index.html
@@ -56,6 +56,44 @@
   </section>
 
 <main >
+  <p dir="rtl" style="text-align: right;">&nbsp;</p><h1 dir="rtl" style="text-align: right;"><hr data-end="127" data-start="124" style="text-align: right;" /><span style="color: red;">🇵🇸 برطانیہ کی تقریباً 60 لیبر ارکانِ پارلیمنٹ کا فلسطین کو فوری طور پر ریاست تسلیم کرنے کا مطالبہ</span></h1>
+
+<h3 dir="rtl" style="text-align: right;"><span style="color: white;"><strong data-end="248" data-start="238">تاریخ:</strong> 12 جولائی 2025 |&nbsp;</span></h3><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhcAfQKlcUtKx1A_XzQ8FuvxgTqq7lx03YAj6z2099cAM3QdzqovVoOtwDKyWpMn9sgLjnXnZOUSB4rpPpnENvE4wem1l2yyt_PBJtCUnKRXIcCilW1NVrFQNNd7xcc7rwIa9gpaDzFg8QZSHf7eA1AokQlz_Hqfd6b5pD7dQI5BZ5P_LY0u6eSAR2kyw/s1024/ghaza.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><span style="color: white;"><img border="0" data-original-height="1024" data-original-width="1024" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhcAfQKlcUtKx1A_XzQ8FuvxgTqq7lx03YAj6z2099cAM3QdzqovVoOtwDKyWpMn9sgLjnXnZOUSB4rpPpnENvE4wem1l2yyt_PBJtCUnKRXIcCilW1NVrFQNNd7xcc7rwIa9gpaDzFg8QZSHf7eA1AokQlz_Hqfd6b5pD7dQI5BZ5P_LY0u6eSAR2kyw/s16000/ghaza.png" /></span></a></div><span style="color: white;"><br /></span><div><span style="color: white;"><br /><br /><br /></span></div>
+<p data-end="591" data-start="285" dir="rtl" style="text-align: right;"><span style="color: white;"><strong data-end="294" data-start="285">لندن:</strong> برطانیہ کی لیبر پارٹی سے تعلق رکھنے والے تقریباً 60 ارکانِ پارلیمنٹ نے برطانوی حکومت سے مطالبہ کیا ہے کہ وہ فلسطینی ریاست کو فوری طور پر تسلیم کرے۔ یہ مطالبہ غزہ میں جاری انسانی بحران اور اسرائیلی وزیر دفاع کے متنازع بیانات کے تناظر میں سامنے آیا ہے، جیسا کہ ہفتے کو <strong data-end="575" data-start="562">دی گارڈین</strong> نے رپورٹ کیا۔</span></p>
+<h2 dir="rtl" style="text-align: right;"><span style="color: white; font-size: small;">&nbsp;خط کا پس منظر</span></h2>
+<p data-end="927" data-start="614" dir="rtl" style="text-align: right;"><span style="color: white;">جمعرات کو برطانوی وزیر خارجہ <strong data-end="656" data-start="643">ڈیوڈ لیمی</strong> کے نام بھیجے گئے اس خط میں، لیبر پارٹی کے اعتدال پسند اور بائیں بازو سے تعلق رکھنے والے ارکان نے اسرائیل پر غزہ میں ’’نسلی تطہیر‘‘ (Ethnic Cleansing) کا الزام لگایا اور فلسطینی شہریوں کو جبراً رفح کے کھنڈرات میں منتقل کرنے کے منصوبے کو فوری طور پر روکنے کا مطالبہ کیا۔</span></p>
+<p data-end="946" data-start="929" dir="rtl" style="text-align: right;"><span style="color: white;">خط میں کہا گیا:</span></p>
+<blockquote data-end="1110" data-start="947" dir="rtl" style="text-align: right;">
+<p data-end="1110" data-start="949"><span style="color: white;">’’اسرائیلی وزیر دفاع کے اس اعلان پر ہمیں شدید تشویش ہے جس کے تحت غزہ کے تمام فلسطینی شہریوں کو رفح کے تباہ حال علاقے میں منتقل کر کے وہاں محصور کر دیا جائے گا۔‘‘</span></p>
+</blockquote>
+<p data-end="1193" data-start="1112" dir="rtl" style="text-align: right;"><span style="color: white;">اسرائیلی انسانی حقوق کے وکیل <strong data-end="1157" data-start="1141">مائیکل سفارڈ</strong> کا حوالہ دیتے ہوئے ارکان نے لکھا:</span></p>
+<blockquote data-end="1397" data-start="1194" dir="rtl" style="text-align: right;">
+<p data-end="1317" data-start="1196"><span style="color: white;">’’یہ منصوبہ دراصل انسانیت کے خلاف جرائم کی ایک عملی منصوبہ بندی ہے جس کا مقصد غزہ کی آبادی کو وہاں سے بے دخل کرنا ہے۔‘‘</span></p>
+<p data-end="1397" data-start="1324"><span style="color: white;">’’اگرچہ یہ وضاحت درست ہے، مگر حقیقت یہ ہے کہ یہ غزہ کی نسلی تطہیر ہے۔‘‘</span></p>
+</blockquote>
+<hr data-end="1402" data-start="1399" dir="rtl" style="text-align: right;" />
+<h2 dir="rtl" style="text-align: right;"><span style="color: white; font-size: small;">&nbsp;خط پر دستخط کرنے والے نمایاں ارکان</span></h2>
+<p data-end="1733" data-start="1446" dir="rtl" style="text-align: right;"><span style="color: white;">یہ خط <strong data-end="1491" data-start="1452">لیبر فرینڈز آف فلسطین اینڈ مڈل ایسٹ</strong> کے تحت تحریر کیا گیا جس پر 59 ارکان نے دستخط کیے۔ ان میں شریک چیئرز <strong data-end="1573" data-start="1560">سارہ اوون</strong> اور <strong data-end="1594" data-start="1578">اینڈریو پیکز</strong>، بزنس اینڈ ٹریڈ کمیٹی کے چیئرمین <strong data-end="1639" data-start="1628">لیم برن</strong>، نیز <strong data-end="1721" data-start="1645">ٹینمان جیت سنگھ دھیسی، اسٹیلہ کریسی، کلائیو لیوس، ڈیان ایبٹ اور ڈان بٹلر</strong> شامل ہیں۔</span></p>
+<hr data-end="1738" data-start="1735" dir="rtl" style="text-align: right;" />
+<h2 dir="rtl" style="text-align: right;"><span style="color: white; font-size: small;">&nbsp;5 اہم مطالبات</span></h2>
+<p data-end="2136" data-start="1761" dir="rtl" style="text-align: right;"><span style="color: white;">ارکانِ پارلیمنٹ نے حکومت سے پانچ مطالبات کیے، جن میں سے کچھ پہلے سے برطانوی پالیسی کا حصہ ہیں:<br data-end="1858" data-start="1855" />اقوام متحدہ ریلیف ایجنسی (UNRWA) کے لیے امداد جاری رکھنا۔<br data-end="1920" data-start="1917" />&nbsp;حماس کے زیرِ قبضہ یرغمالیوں کی رہائی کی کوششیں۔<br data-end="1972" data-start="1969" />مغربی کنارے کی اسرائیلی بستیوں پر تجارتی پابندیاں لگانا۔<br data-end="2033" data-start="2030" />&nbsp;فلسطین کو فوری طور پر ایک خودمختار ریاست تسلیم کرنا۔<br data-end="2090" data-start="2087" />&nbsp;دو ریاستی حل کو بچانے کے لیے فوری اقدامات۔</span></p>
+<p data-end="2160" data-start="2138" dir="rtl" style="text-align: right;"><span style="color: white;">انہوں نے خبردار کیا:</span></p>
+<blockquote data-end="2323" data-start="2161" dir="rtl" style="text-align: right;">
+<p data-end="2323" data-start="2163"><span style="color: white;">’’اگر ہم فلسطین کو ریاست تسلیم نہیں کرتے تو اپنی ہی دو ریاستی حل کی پالیسی کو نقصان پہنچا رہے ہیں اور اسرائیل کے قبضے کو جاری رکھنے کی راہ ہموار کر رہے ہیں۔‘‘</span></p>
+</blockquote>
+<hr data-end="2328" data-start="2325" dir="rtl" style="text-align: right;" />
+<h2 dir="rtl" style="text-align: right;"><span style="color: white; font-size: small;">&nbsp;برطانوی حکومت اور یورپی موقف</span></h2>
+<p data-end="2405" data-start="2366" dir="rtl" style="text-align: right;"><span style="color: white;">برطانوی وزارت خارجہ کے ترجمان نے کہا:</span></p>
+<blockquote data-end="2513" data-start="2406" dir="rtl" style="text-align: right;">
+<p data-end="2513" data-start="2408"><span style="color: white;">’’ہم فلسطینی ریاست کو تسلیم کرنے کے پابند ہیں اور جب یہ امن عمل کے لیے زیادہ مؤثر ہو تب ایسا کریں گے۔‘‘</span></p>
+</blockquote>
+<p data-end="2701" data-start="2515" dir="rtl" style="text-align: right;"><span style="color: white;">یہ مطالبہ ایسے وقت پر سامنے آیا ہے جب فرانسیسی صدر <strong data-end="2585" data-start="2566">ایمانوئل میکرون</strong> نے اپنے دورۂ برطانیہ کے دوران اسی قسم کا پیغام دیا تھا۔ انہوں نے وزیر اعظم <strong data-end="2675" data-start="2661">کیر سٹارمر</strong> کے ساتھ ملاقات میں کہا:</span></p>
+<blockquote data-end="2815" data-start="2702" dir="rtl" style="text-align: right;">
+<p data-end="2815" data-start="2704"><span style="color: white;">’’غزہ میں غیر مشروط جنگ بندی کا مطالبہ اور فلسطینی ریاست کو تسلیم کرنا ہی امن کی طرف جانے کا واحد راستہ ہے۔‘‘</span></p>
+</blockquote>
+<hr data-end="2820" data-start="2817" dir="rtl" style="text-align: right;" />
+<h3 data-end="2832" data-start="2822" dir="rtl" style="text-align: right;"><span style="color: white; font-size: small;">&nbsp;نوٹ</span></h3>
+<p data-end="3021" data-start="2833" dir="rtl" style="text-align: right;"><span style="color: white;">یہ حالیہ ہفتوں میں لیبر ارکانِ پارلیمنٹ کی جانب سے لکھا گیا دوسرا خط ہے جس میں فلسطین کو فوری تسلیم کرنے کا مطالبہ کیا گیا۔ تاہم یہ پہلا موقع ہے کہ ارکان نے کھل کر اپنے نام ظاہر کیے ہیں۔</span></p>
   <article>
     <p style="font-weight: bold; text-align: left;"><span><span style="color: white; font-weight: bold; text-align: center;"></span></span></p><h3 style="font-size: xx-large;"><span><span style="color: white; font-weight: bold; text-align: center;"> Welcome to Online Learning Tuition🌟Introduction</span></span></h3><span><span style="color: white; font-weight: bold; text-align: left;">
 <p data-end="324" data-start="204" style="text-align: justify;"><span style="font-size: medium;">We are delighted to welcome you to <strong data-end="266" data-start="239">Online Learning Tuition</strong>, your trusted partner in the world of online education.</span></p>
