Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -56,6 +56,68 @@
   </section>
 
 <main >
+  <article><p><span style="color: white;">&nbsp;</span></p><h1 data-end="149" data-start="97"><span style="color: white;">The Quarrelsome Person: The Most Disliked by Allah</span></h1><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiUa0L4beHgF0r3BJ9QakQd7v5p-7Hyb-gAyZREWtwukGtAbqvcu18oApDzMk0_244Jn9ObVHnqKp9YtATp_mjtTBPLqbKURRMU4kSrWwGJnS8MpbCS8tK8q05fvETkGZPWhjvxh3Mf6_0b5Qr6AEp5It0llq4eyy4ZwPekTgAmlDbi9xtBdlGkfxDvPA/s1024/islam.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><span style="color: white;"><img border="0" data-original-height="952" data-original-width="1024" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiUa0L4beHgF0r3BJ9QakQd7v5p-7Hyb-gAyZREWtwukGtAbqvcu18oApDzMk0_244Jn9ObVHnqKp9YtATp_mjtTBPLqbKURRMU4kSrWwGJnS8MpbCS8tK8q05fvETkGZPWhjvxh3Mf6_0b5Qr6AEp5It0llq4eyy4ZwPekTgAmlDbi9xtBdlGkfxDvPA/s16000/islam.png" /></span></a></div><span style="color: white;"><br /></span><div><span style="color: white;"><br /></span></div>
+<p data-end="529" data-start="151"><span style="color: white; font-size: medium;">Islam is a religion that teaches humanity morals, patience, gentleness, and brotherhood. The entire life of our beloved Prophet Muhammad ﷺ was a practical demonstration of the character a Muslim should adopt and how one should treat others.<br data-end="394" data-start="391" />
+Unfortunately, in today’s era, we often see people quarreling over trivial matters; harsh words and hard hearts take control of them.</span></p>
+<p data-end="715" data-start="531"><span style="color: white; font-size: medium;">It is important to remember that a quarrelsome person is the most disliked by Allah Almighty. Yes! This is not just a general saying but is proven by the noble Hadith of the Prophet ﷺ.</span></p>
+<hr data-end="720" data-start="717" />
+<h2 data-end="743" data-start="722"><span style="color: white;">Prophetic Saying ﷺ</span></h2>
+<p data-end="812" data-start="744"><span style="color: white; font-size: medium;">It is narrated from Aisha (RA) that the Messenger of Allah ﷺ said:</span></p>
+<blockquote data-end="929" data-start="813">
+<p data-end="929" data-start="815"><span style="color: white; font-size: medium;"><em data-end="880" data-start="815">“The most hated person to Allah is the one who is quarrelsome.”</em><br data-end="883" data-start="880" />
+(Sahih Bukhari, Book of Manners, Hadith: 2457)</span></p>
+</blockquote>
+<p data-end="1176" data-start="931"><span style="color: white; font-size: medium;">In this blessed Hadith, the Prophet ﷺ clearly instructed us to avoid this bad habit. Being quarrelsome means a person constantly tries to dominate others, argues excessively, makes everything an issue of ego, and refuses to overlook and forgive.</span></p>
+<hr data-end="1181" data-start="1178" />
+<h2 data-end="1212" data-start="1183"><span style="color: white;">Harms of Being Quarrelsome</span></h2>
+<p data-end="1491" data-start="1213"><span style="color: white; font-size: medium;">It is essential to understand that a quarrelsome person not only ruins their Hereafter but also destroys their life in this world. Such a person loses respect, people start avoiding them, peace is taken away from the home, relationships fall apart, and chaos spreads in society.</span></p>
+<hr data-end="1496" data-start="1493" />
+<h2 data-end="1525" data-start="1498"><span style="color: white;">Gentleness is the Sunnah</span></h2>
+<p data-end="1700" data-start="1526"><span style="color: white; font-size: medium;">The Sunnah of the Prophet ﷺ is to speak gently, show patience even when disagreements arise, and remain silent if matters escalate.<br data-end="1660" data-start="1657" />
+In another Hadith, the Prophet ﷺ said:</span></p>
+<blockquote data-end="1850" data-start="1701">
+<p data-end="1850" data-start="1703"><span style="color: white; font-size: medium;"><em data-end="1804" data-start="1703">“Whoever gives up disputing even when he is in the right, I guarantee for him a house in Paradise.”</em><br data-end="1807" data-start="1804" />
+(Abu Dawood, Book of Manners, Hadith: 4800)</span></p>
+</blockquote>
+<p data-end="1984" data-start="1852"><span style="color: white;"><span style="font-size: medium;">Meaning, even if one is right but leaves arguing solely for the pleasure of Allah, Allah Almighty will grant him Paradise in retu</span>rn.</span></p>
+<hr data-end="1989" data-start="1986" />
+<h2 data-end="2046" data-start="1991"><span style="color: white;">Today’s Reflection: Following Desires and Quarreling</span></h2>
+<p data-end="2098" data-start="2047"><span style="color: white; font-size: medium;">In the image, there is a very important reminder:</span></p>
+<blockquote data-end="2145" data-start="2099">
+<p data-end="2145" data-start="2101"><em data-end="2145" data-start="2101"><span style="color: white; font-size: medium;">“Desires lead a person towards falsehood.”</span></em></p>
+</blockquote>
+<p data-end="2394" data-start="2147"><span style="color: white; font-size: medium;">This is absolutely true. Often, due to desires and ego, a person chooses the wrong path. They simply want to impose their opinion, even if it is incorrect. That is why Allah commands us not to follow our desires but to make decisions with justice.</span></p>
+<hr data-end="2399" data-start="2396" />
+<h2 data-end="2419" data-start="2401"><span style="color: white;">Practical Steps</span></h2>
+<ul data-end="2670" data-start="2420">
+<li data-end="2450" data-start="2420">
+<p data-end="2450" data-start="2422"><span style="color: white; font-size: medium;">First, control your anger.</span></p>
+</li>
+<li data-end="2509" data-start="2451">
+<p data-end="2509" data-start="2453"><span style="color: white; font-size: medium;">Avoid disputes and arguments, even when you are right.</span></p>
+</li>
+<li data-end="2545" data-start="2510">
+<p data-end="2545" data-start="2512"><span style="color: white; font-size: medium;">Use gentle speech, and forgive.</span></p>
+</li>
+<li data-end="2615" data-start="2546">
+<p data-end="2615" data-start="2548"><span style="color: white; font-size: medium;">Be someone who builds relationships, not someone who breaks them.</span></p>
+</li>
+<li data-end="2670" data-start="2616">
+<p data-end="2670" data-start="2618"><span style="color: white; font-size: medium;">Place the pleasure of Allah above everything else.</span></p>
+</li>
+</ul>
+<hr data-end="2675" data-start="2672" />
+<h2 data-end="2690" data-start="2677"><span style="color: white;">Conclusion</span></h2>
+<p data-end="3068" data-start="2691"><span style="color: white; font-size: medium;">Let’s pledge today to make our tongues, our behavior, and our hearts gentle. Let’s adopt patience and forgiveness.<br data-end="2808" data-start="2805" />
+Quarreling does not improve either this world or the Hereafter — but patience and gentleness improve both.<br data-end="2917" data-start="2914" />
+May Allah grant us the ability to follow the Sunnah of the Prophet ﷺ and to purify our hearts from jealousy, hatred, and quarrelsome behavior. Ameen.</span></p>
+<hr data-end="3073" data-start="3070" />
+<h2 data-end="3090" data-start="3075"><span style="color: white;">Reference:</span></h2>
+<p data-end="3116" data-start="3091"><strong data-end="3114" data-start="3091"><span style="color: white; font-size: medium;">Prophetic Saying ﷺ:</span></strong></p>
+<blockquote data-end="3230" data-start="3117">
+<p data-end="3230" data-start="3119"><span style="color: white; font-size: medium;"><em data-end="3189" data-start="3119">“Indeed, the most hated man to Allah is the one who is quarrelsome.”</em><br data-end="3192" data-start="3189" />
+(Sahih Bukhari: 2457, Book of Manners)</span></p>
+</blockquote></article>
   <p dir="rtl" style="text-align: right;">&nbsp;</p><h1 dir="rtl" style="text-align: right;"><hr data-end="127" data-start="124" style="text-align: right;" /><span style="color: red;">🇵🇸 برطانیہ کی تقریباً 60 لیبر ارکانِ پارلیمنٹ کا فلسطین کو فوری طور پر ریاست تسلیم کرنے کا مطالبہ</span></h1>
 
 <h3 dir="rtl" style="text-align: right;"><span style="color: white;"><strong data-end="248" data-start="238">تاریخ:</strong> 12 جولائی 2025 |&nbsp;</span></h3><div class="separator" style="clear: both; text-align: center;"><a href="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhcAfQKlcUtKx1A_XzQ8FuvxgTqq7lx03YAj6z2099cAM3QdzqovVoOtwDKyWpMn9sgLjnXnZOUSB4rpPpnENvE4wem1l2yyt_PBJtCUnKRXIcCilW1NVrFQNNd7xcc7rwIa9gpaDzFg8QZSHf7eA1AokQlz_Hqfd6b5pD7dQI5BZ5P_LY0u6eSAR2kyw/s1024/ghaza.png" imageanchor="1" style="clear: right; float: right; margin-bottom: 1em; margin-left: 1em;"><span style="color: white;"><img border="0" data-original-height="1024" data-original-width="1024" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhcAfQKlcUtKx1A_XzQ8FuvxgTqq7lx03YAj6z2099cAM3QdzqovVoOtwDKyWpMn9sgLjnXnZOUSB4rpPpnENvE4wem1l2yyt_PBJtCUnKRXIcCilW1NVrFQNNd7xcc7rwIa9gpaDzFg8QZSHf7eA1AokQlz_Hqfd6b5pD7dQI5BZ5P_LY0u6eSAR2kyw/s16000/ghaza.png" /></span></a></div><span style="color: white;"><br /></span><div><span style="color: white;"><br /><br /><br /></span></div>
