Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -61,31 +61,31 @@
 <p data-end="562" data-start="249"><span style="color: white;">In Islam, the significance of good character is undeniable. The Holy Prophet Muhammad (peace be upon him) taught us the finest conduct and noble character through every aspect of his life. He said, <em data-end="536" data-start="447">“I guarantee a house in the highest part of Paradise for the one who has good manners.”</em> (Abu Dawood, Hadith 4800)</span></p>
 <p data-end="688" data-start="564"><span style="color: white;">This Hadith is a powerful reminder of how moral excellence draws a person closer to Allah and makes them worthy of Paradise.</span></p>
 <hr data-end="693" data-start="690" />
-<h3 style="text-align: left;"><strong data-end="725" data-start="698"><span style="color: white; font-size: small;">What Is Good Character?</span></strong></h3>
+<h3 style="text-align: left;"><strong data-end="725" data-start="698"><span style="color: white; font-size: normal;">What Is Good Character?</span></strong></h3>
 <p data-end="1050" data-start="727"><span style="color: white;">Good character means treating others with kindness, speaking gently, avoiding harm, and always telling the truth. It is not limited to acts of worship; rather, it is about adopting good manners in all aspects of daily life. The Qur’an states, <em data-end="1033" data-start="970">“And indeed, you (O Prophet) are of a great moral character.”</em> (Surah Al-Qalam)</span></p>
 <hr data-end="1055" data-start="1052" />
-<h2 data-end="1099" data-start="1057"><strong data-end="1099" data-start="1060"><span style="color: white; font-size: small;">Impact of Good Character on Society</span></strong></h2>
+<h2 data-end="1099" data-start="1057"><strong data-end="1099" data-start="1060"><span style="color: white; font-size: normal;">Impact of Good Character on Society</span></strong></h2>
 <p data-end="1355" data-start="1101"><span style="color: white;">A person with good character earns the love and respect of those around them. Their kindness spreads like a pleasant fragrance, and people are naturally drawn to them. Such individuals bring peace, ease the hardships of others, and share in their sorrow.</span></p>
 <hr data-end="1360" data-start="1357" />
-<h2 data-end="1400" data-start="1362"><strong data-end="1400" data-start="1365"><span style="color: white; font-size: small;">Teachings of the Prophet (PBUH)</span></strong></h2>
+<h2 data-end="1400" data-start="1362"><strong data-end="1400" data-start="1365"><span style="color: white; font-size: normal;">Teachings of the Prophet (PBUH)</span></strong></h2>
 <p data-end="1705" data-start="1402"><span style="color: white;">A study of the Prophet’s (peace be upon him) life reveals that his most distinguished quality was his exemplary character. He said, <em data-end="1593" data-start="1534">“The best among you are those who have the best manners.”</em> He also stated that on the Day of Judgment, the heaviest thing on the scales will be a person’s good character.</span></p>
 <hr data-end="1710" data-start="1707" />
-<h2 data-end="1745" data-start="1712"><strong data-end="1745" data-start="1715"><span style="color: white; font-size: small;">Benefits of Good Character</span></strong></h2>
+<h2 data-end="1745" data-start="1712"><strong data-end="1745" data-start="1715"><span style="color: white; font-size: normal;">Benefits of Good Character</span></strong></h2>
 <p data-end="2009" data-start="1747"><span style="color: white;">Good character not only leads to success in the Hereafter but also brings honor and love in this world. A well-mannered person builds strong relationships, gains trust, and earns people’s affection. Their words carry influence, and their presence brings harmony.</span></p>
 <hr data-end="2014" data-start="2011" />
-<h2 data-end="2045" data-start="2016"><strong data-end="2045" data-start="2019"><span style="color: white; font-size: small;">Harms of Bad Character</span></strong></h2>
+<h2 data-end="2045" data-start="2016"><strong data-end="2045" data-start="2019"><span style="color: white; font-size: normal;">Harms of Bad Character</span></strong></h2>
 <p data-end="2292" data-start="2047"><span style="color: white;">In contrast, bad character brings disgrace in both this world and the next. A person with poor manners is disliked, becomes isolated, and finds life increasingly difficult. Allah dislikes those who use foul language or hurt others unnecessarily.</span></p>
 <hr data-end="2297" data-start="2294" />
-<h2 data-end="2335" data-start="2299"><strong data-end="2335" data-start="2302"><span style="color: white; font-size: small;">How to Develop Good Character</span></strong></h2>
+<h2 data-end="2335" data-start="2299"><strong data-end="2335" data-start="2302"><span style="color: white; font-size: normal;">How to Develop Good Character</span></strong></h2>
 <p data-end="2622" data-start="2337"><span style="color: white;">To improve character, one must purify the heart from jealousy, hatred, pride, and resentment. Pray for others and focus on self-reform rather than finding faults in them. Studying the Prophet’s (peace be upon him) life and following his example is the best way to refine one’s manners.</span></p>
 <hr data-end="2627" data-start="2624" />
-<h2 data-end="2661" data-start="2629"><strong data-end="2661" data-start="2632"><span style="color: white; font-size: small;">The Message of the Hadith</span></strong></h2>
+<h2 data-end="2661" data-start="2629"><strong data-end="2661" data-start="2632"><span style="color: white; font-size: normal;">The Message of the Hadith</span></strong></h2>
 <p data-end="2905" data-start="2663"><span style="color: white;">This Hadith clearly teaches that prayer and fasting alone are not enough—morals and behavior are essential parts of faith. Those with excellent character will be rewarded with high ranks in Paradise, alongside the Prophet (peace be upon him).</span></p>
 <hr data-end="2910" data-start="2907" />
-<h2 data-end="2935" data-start="2912"><strong data-end="2935" data-start="2915"><span style="color: white; font-size: small;">Practical Action</span></strong></h2>
+<h2 data-end="2935" data-start="2912"><strong data-end="2935" data-start="2915"><span style="color: white; font-size: normal;">Practical Action</span></strong></h2>
 <p data-end="3198" data-start="2937"><span style="color: white;">We should not make worldly success our only goal. Instead, we must strive to improve our character to achieve eternal success in the Hereafter. Be gentle with your parents, siblings, neighbors, and society at large. Avoid hurting others and always speak kindly.</span></p>
 <hr data-end="3203" data-start="3200" />
-<h2 data-end="3222" data-start="3205"><strong data-end="3222" data-start="3208"><span style="color: white; font-size: small;">Conclusion</span></strong></h2>
+<h2 data-end="3222" data-start="3205"><strong data-end="3222" data-start="3208"><span style="color: white; font-size: normal;">Conclusion</span></strong></h2>
 <p data-end="3466" data-start="3224"><span style="color: white;">Good character is a priceless treasure—it never runs out and never causes harm. It brings respect in this world and a promise of Paradise in the next. Therefore, every Muslim must focus not only on worship but also on refining their behavior.</span></p>
 <p data-end="3619" data-start="3468"><span style="color: white;">May Allah grant us the ability to improve our character and include us among those for whom the Prophet (peace be upon him) guaranteed Paradise. Ameen.</span></p> </article>
 
@@ -96,12 +96,12 @@ Unfortunately, in today’s era, we often see people quarreling over trivial mat
 <p data-end="715" data-start="531"><span style="color: white; font-size: medium;">It is important to remember that a quarrelsome person is the most disliked by Allah Almighty. Yes! This is not just a general saying but is proven by the noble Hadith of the Prophet ﷺ.</span></p>
 <hr data-end="720" data-start="717" />
 <h2 data-end="743" data-start="722"><span style="color: white;">Prophetic Saying ﷺ</span></h2>
-<p data-end="812" data-start="744"><span style="color: white; font-size: medium;">It is narrated from Aisha (RA) that the Messenger of Allah ﷺ said:</span></p>
+<p data-end="812" data-start="744"><span style="color: white; font-size: normal;">It is narrated from Aisha (RA) that the Messenger of Allah ﷺ said:</span></p>
 <blockquote data-end="929" data-start="813">
-<p data-end="929" data-start="815"><span style="color: white; font-size: medium;"><em data-end="880" data-start="815">“The most hated person to Allah is the one who is quarrelsome.”</em><br data-end="883" data-start="880" />
+<p data-end="929" data-start="815"><span style="color: white; font-size: normal;"><em data-end="880" data-start="815">“The most hated person to Allah is the one who is quarrelsome.”</em><br data-end="883" data-start="880" />
 (Sahih Bukhari, Book of Manners, Hadith: 2457)</span></p>
 </blockquote>
-<p data-end="1176" data-start="931"><span style="color: white; font-size: medium;">In this blessed Hadith, the Prophet ﷺ clearly instructed us to avoid this bad habit. Being quarrelsome means a person constantly tries to dominate others, argues excessively, makes everything an issue of ego, and refuses to overlook and forgive.</span></p>
+<p data-end="1176" data-start="931"><span style="color: white; font-size: normal;">In this blessed Hadith, the Prophet ﷺ clearly instructed us to avoid this bad habit. Being quarrelsome means a person constantly tries to dominate others, argues excessively, makes everything an issue of ego, and refuses to overlook and forgive.</span></p>
 <hr data-end="1181" data-start="1178" />
 <h2 data-end="1212" data-start="1183"><span style="color: white;">Harms of Being Quarrelsome</span></h2>
 <p data-end="1491" data-start="1213"><span style="color: white; font-size: medium;">It is essential to understand that a quarrelsome person not only ruins their Hereafter but also destroys their life in this world. Such a person loses respect, people start avoiding them, peace is taken away from the home, relationships fall apart, and chaos spreads in society.</span></p>
@@ -110,7 +110,7 @@ Unfortunately, in today’s era, we often see people quarreling over trivial mat
 <p data-end="1700" data-start="1526"><span style="color: white; font-size: medium;">The Sunnah of the Prophet ﷺ is to speak gently, show patience even when disagreements arise, and remain silent if matters escalate.<br data-end="1660" data-start="1657" />
 In another Hadith, the Prophet ﷺ said:</span></p>
 <blockquote data-end="1850" data-start="1701">
-<p data-end="1850" data-start="1703"><span style="color: white; font-size: medium;"><em data-end="1804" data-start="1703">“Whoever gives up disputing even when he is in the right, I guarantee for him a house in Paradise.”</em><br data-end="1807" data-start="1804" />
+<p data-end="1850" data-start="1703"><span style="color: white; font-size: normal;"><em data-end="1804" data-start="1703">“Whoever gives up disputing even when he is in the right, I guarantee for him a house in Paradise.”</em><br data-end="1807" data-start="1804" />
 (Abu Dawood, Book of Manners, Hadith: 4800)</span></p>
 </blockquote>
 <p data-end="1984" data-start="1852"><span style="color: white;"><span style="font-size: medium;">Meaning, even if one is right but leaves arguing solely for the pleasure of Allah, Allah Almighty will grant him Paradise in retu</span>rn.</span></p>
