Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header >
   
 
-  <img src="SHAKIR.JPG" align="left"  style="width: 100px ; height : 120px;border :2px solid black; "><div class="one"><h1> WELCOME TO ONLINE TUTION ACADEMY</h1></div>
+  <div class="one"><h1> WELCOME TO ONLINE TUTION ACADEMY</h1></div>
 </header>
 
 
@@ -342,3 +342,4 @@ May Allah grant us the ability to follow the Sunnah of the Prophet ﷺ and to pu
 
 </body>
 </html>
+
